# CortexLib

./: .gitignore
Tools/RegistersGenerator/: parser.py  pyproject.toml  reg_wrappers_generator.py
