[project]
name = ""
version = ""
description = ""
authors = [
    {name = "francisthebasilisk", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "cmsis-svd>=0.4",
    "setuptools>=60.10.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
